<resources>
    <string name="app_name">Pomodoro timer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="splash_text">Timer</string>
    <string name="title_activity_activity_timer">ActivityTimer</string>
    <string name="rest_api_endpoint" translatable="false">https://trello.com</string>
    <string name="network_log_tag">NETWORK</string>

    <string name="pomodoro_count_format" formatted="false" translatable="false">%dx</string>
    <string name="time_format" formatted="false" translatable="false">%02dh:%02d:%02d</string>

    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="authorization_error">Authorization error</string>
    <string name="todo_list">To Do</string>
    <string name="doing_list">Doing</string>
    <string name="done_list">Done</string>
    <string name="error_loading_task_list">Task list cannot be loaded from cache.</string>
    <string name="time">Time:</string>
    <string name="pomodoros">Pomodoros:</string>
    <string name="total_time">Total time:</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="start_time_tracking">Start time tracking</string>
    <string name="start_time_tracking_message">Start time tracking for %s? The task will be moved to \'Doing\' list automatically.</string>
    <string name="internet_connection_error">Error communicating with Trello. Please check your internet connection and try again.</string>
    <string name="input_trello_token">Please input Trello token</string>

</resources>
